# JAKL

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  jakl.hpp
include/jakl/: access.hpp  buffer.hpp  config.hpp  context.hpp  device.hpp  event.hpp  handler.hpp  id.hpp  index.hpp  kernel.hpp  queue.hpp  range.hpp  system.hpp
include/jakl/config/: assert.hpp  config.hpp  macros.hpp
include/jakl/core/: access.hpp  buffer.hpp  context.hpp  core.hpp  device.hpp  event.hpp  handler.hpp  id.hpp  queue.hpp  range.hpp  range.ipp  system.hpp
include/jakl/detail/: buffer.hpp  buffer.ipp  device.hpp  event.hpp  gpu_device.hpp  host_device.hpp  queue.hpp  shared_ptr_base.hpp  shared_ptr_impl.hpp  singleton.hpp
include/jakl/detail/buffer/: buffer.hpp
include/jakl/detail/config/: assert.hpp  error.hpp  macros.hpp
include/jakl/detail/device/: cpu_device.hpp  device.hpp  gpu_device.hpp  host_device.hpp
include/jakl/detail/event/: event.hpp  gpu_event.hpp  host_event.hpp
include/jakl/detail/handler/: cpu_handler.hpp  handler.hpp  host_handler.hpp
include/jakl/detail/queue/: cpu_queue.hpp  gpu_queue.hpp  host_queue.hpp  queue.hpp  task.hpp
include/jakl/detail/system/: cpu.hpp  cuda.hpp  gpu.hpp  hip.hpp  host.hpp  openmp.hpp
include/jakl/detail/tools/: shared_ptr_impl.hpp
include/jakl/kernel/: index.hpp  index.ipp  kernel.hpp
include/jakl/other/: buffer_base.hpp  task.hpp
src/: CMakeLists.txt
src/core/: system.cpp
src/core/system/: cpu.cpp  gpu.hpp  host.cpp
src/system/: cpu.cpp  gpu.cpp  host.cpp  openmp.cpp  system.cpp
test/: CMakeLists.txt
test/performance/: CMakeLists.txt  matmul.cpp  stop_watch.hpp  timer.hpp
test/scratch/: CMakeLists.txt  cuda_checkout.cu  dag.cpp  dummy.cpp  omp_checkout.cpp  openmp_report.cpp  simple.cpp
test/unit/: CMakeLists.txt  buffer.cpp  context.cpp  device.cpp  event.cpp  id.cpp  index.cpp  queue.cpp  range.cpp  system.cpp
test/unit/core/: CMakeLists.txt  context.cpp  device.cpp  id.cpp
